tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_6.py
a = [2,5]
b = [3]
b = a
